# safe-jax

./: .gitignore  LICENSE  README.md  ckpt_index.py  eval.py  pyproject.toml  requirements.txt  train.py  train_utils.py
datasets/: __init__.py  image_process.py  label_noise_dataset.py
evaluate/: __init__.py  adversarial.py  attack.py  checkpoint.py  clean.py  corrupt.py  steps.py
models/: __init__.py  mlp.py  resnet.py  vgg.py
scripts/: cifar100_resent32.sh  cifar100_resnet32.sh  cifar100_vgg19.sh  cifar10_resnet20.sh  cifar10_vgg19.sh  eval_adversarial_l2.sh  eval_adversarial_linf.sh  eval_cifar10c.sh  eval_clean.sh  list_checkpoints.sh
sparsify/: __init__.py  admm.py  gmp_iht.py  safe.py  utils.py
